--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -81,9 +81,9 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                         <div id="addToBasketTreeImage"></div>
                     </section>
                     <section id="addToBasketDetails">
-                        <div id="addToBasketPrice" class="addToBasketDetail">
-                            <label for="priceInput" id="priceLabel">Price: </label>
-                            <input type="text" name="priceInput" id="priceInput" value="695kr" readonly>
+                        <div id="addToBasketName" class="addToBasketDetail">
+                            <label for="nameInput" id="nameLabel">Name: </label>
+                            <input type="text" name="nameInput" id="nameInput" value="Untitled" maxlength="25">
                         </div>
                         <div id="addToBasketAmount" class="addToBasketDetail">
                             <div class="fancySelection">
@@ -114,6 +114,10 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                                     <div class="arrowRight" id="sizeArrowRight" alt=">" onclick="increaseSize()"></div>
                                 </div>
                             </div>
+                        </div>
+                        <div id="addToBasketPrice" class="addToBasketDetail">
+                            <label for="priceInput" id="priceLabel">Price: </label>
+                            <input type="text" name="priceInput" id="priceInput" value="695kr" readonly>
                         </div>
                         <div id="addToBasketButtonContainer" class="addToBasketDetail">
                             <div id="recommendedSizes">
