--- a/src/main/resources/templates/profile/treeCollections.html
+++ b/src/main/resources/templates/profile/treeCollections.html
@@ -47,7 +47,7 @@
                 <div class="designImage"></div>
                 <div class="designInfo">
                     <section class="infoHeader">
-                        <span>Untitled</span>
+                        <span class="orderName">Untitled</span>
                         <span class="spanBoxText">Boxes: 20</span>
                     </section>
                     <section class="infoContent">
