--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -77,9 +77,6 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                     <div id="addToBasketBackBtn" data-dismiss="modal">Back</div>
                 </section>
                 <section id="addToBasketContent">
-                    <section id="addToBasketTreeDesign">
-                        <div id="addToBasketTreeImage"></div>
-                    </section>
                     <section id="addToBasketDetails">
                         <div id="addToBasketName" class="addToBasketDetail">
                             <label for="nameInput" id="nameLabel">Name: </label>
@@ -135,16 +132,11 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                 </section>
                 <section id="addToBasketFooter">
                     <p>
-                        Note: When you purchase this tree you are automatically paying to plant a tree in the amazon
-                        forest.
+                        Note: You can only purchase this tree when you have logged in and verified your email.
                     </p>
                     <p>
                         Note: Packaging is made of recycled materials that are eco friendly and the paper is FSC
                         certified
-                    </p>
-                    <p>
-                        Note: The wood that is used for the design is a high quality hard oak and is produced here in
-                        denmark.
                     </p>
                 </section>
             </div>
