--- a/src/main/resources/templates/products/generateFamilyTree.html
+++ b/src/main/resources/templates/products/generateFamilyTree.html
@@ -254,19 +254,11 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     </div>
 
-                    <div class="loadSave">
+                    <div class="save">
                         <button id="saveDesignButton" onclick="saveDesign()">
                             Save
                         </button>
-
-                        <button id="loadDesignButton" onclick="">
-                            Load
-                        </button>
                     </div>
-
-                    <button id="addToBasket" class="largeButton" data-toggle="modal" data-target="#addToBasketModal" onclick="updatePrice()">
-                        Add To Basket
-                    </button>
 
                     <!-- AD SHARE FUNC LATER
                     <div class="fb-share-button"
