--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -100,7 +100,7 @@
                            href="https://docs.google.com/document/d/1lMEzya3HeEzvLG6wwDYhAw0memVBxNc8J3q-4sJN-u8/edit"
                            style="color:var (--mainSoftColor);" id="accountTermsAndConditions"
                            target="_blank">terms and conditions</a> of creating a user: </p>
-                    <input style="width:20%!important;"type="checkbox" class="switch-input" id="fontSizeInput">
+                    <input style="width:20%!important;"type="checkbox" class="switch-input">
                 </div>
 
                 <button type="button" onclick="registerUser()" id="createAccountButton">Create account</button>
