--- a/src/main/resources/templates/profile/orders.html
+++ b/src/main/resources/templates/profile/orders.html
@@ -44,8 +44,11 @@
         </div>
         <div id="details">
             <section class="orderContainer">
-                <span class="orderStatus orderInfo">Status: N/A</span>
-                <span class="orderDateCreate orderInfo">Delivered on: N/A</span>
+                <div class="orderHeader">
+                    <span class="orderStatus orderInfo">Status: N/A</span>
+                    <span class="orderDateCreated orderInfo">Created on: N/A</span>
+                    <span class="orderExpectedDelivery orderInfo">Expected Delivery Date: N/A</span>
+                </div>
                 <div class="orderShipmentInfo orderInfo">
                     <span class="orderTitle">Design:</span>
                     <span class="orderOrdersDesign">name: N/A</span>
