--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -28,10 +28,11 @@
                     <div class="header">
                         <h2 class="modal-title">Cookies information</h2>
                         <p>By clicking ACCEPT, you are agreeing with the cookie
-                            <a href="/cookieTermsAndConditionsDanish" id="cookieTerms" target="_blank">terms and conditions</a>
+                            <a href="/cookieTermsAndConditionsDanish" id="cookieTerms" target="_blank">terms and
+                                conditions</a>
                             of this page.</p>
                     </div>
-                    <button type="button" onclick="acceptCookies()" id="acceptCookiesButton" >I ACCEPT</button>
+                    <button type="button" onclick="acceptCookies()" id="acceptCookiesButton">I ACCEPT</button>
                 </div>
             </div>
         </div>
@@ -61,7 +62,8 @@
                 <input type="password" th:name="password" id="loginPassword" placeholder="Type your password . . ."
                        maxlength="60" required>
                 <hr>
-                <a type="button" href="/forgotPassword" name="forgotPassword" id="forgotPassword">Forgot password?</a><br>
+                <a type="button" href="/forgotPassword" name="forgotPassword" id="forgotPassword">Forgot
+                    password?</a><br>
 
                 <button type="button" onclick="submitLogin()" id="loginSubmitButton">login</button>
                 <br><br>
@@ -92,15 +94,17 @@
                 <p>Password</p>
                 <input type="password" th:name="password" id="signUpPassword" placeholder="Type your password . . ."
                        maxlength="60" required>
+                <p>Confirm Password</p>
+                <input type="password" th:name="confirmPassword" id="signupConfirmPassword"
+                       placeholder="Type your password . . ." maxlength="60" required>
                 <hr>
-
                 <!-- T&C for account creation -->
-                <div style="display: flex; flex-direction: row;">
-                    <p style="font-size:12px;">By checking the box you are accepting the <a
-                           href="https://docs.google.com/document/d/1lMEzya3HeEzvLG6wwDYhAw0memVBxNc8J3q-4sJN-u8/edit"
-                           style="color:var (--mainSoftColor);" id="accountTermsAndConditions"
-                           target="_blank">terms and conditions</a> of creating a user: </p>
-                    <input style="width:20%!important;"type="checkbox" class="switch-input">
+                <div style="display: flex; flex-direction: row; justify-content: center">
+                    <p style="font-size:12px;">By signing up you are accepting the <a
+                            href="https://docs.google.com/document/d/1lMEzya3HeEzvLG6wwDYhAw0memVBxNc8J3q-4sJN-u8/edit"
+                            style="color:var(--actionColor);" id="accountTermsAndConditions"
+                            target="_blank">terms and conditions</a> of creating a user
+                    </p>
                 </div>
 
                 <button type="button" onclick="registerUser()" id="createAccountButton">Create account</button>
