--- a/src/main/resources/static/styles/basket.css
+++ b/src/main/resources/static/styles/basket.css
@@ -80,6 +80,23 @@
     margin-bottom: 1vh;
 }
 
+#orderInformation
+{
+    justify-content: center;
+}
+
+#applyDiscountBtn
+{
+    width: 50%;
+    margin: 1vh 25%;
+    min-width: 100px;
+    padding: 2.5%;
+    background-color: var(--actionColor);
+    border-radius: 12px;
+    border: none;
+    color: white;
+}
+
 #orderInformation th
 {
     padding: 0.5vh;
