--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -83,9 +83,9 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                         </div>
                         <div id="addToBasketAmount" class="addToBasketDetail">
                             <div class="fancySelection">
-                                <div class="fancyHeader"><span>Amount</span>
+                                <div class="fancyHeader"><span th:text="#{basket.info.amount.name}"></span>
                                     <div id="amountInfoIcon" class="addToBasketInfoIcon infoPopup">
-                                        <span class="infoPopupText">Wow, much text</span>
+                                        <span class="infoPopupText" th:text="#{basket.info.amount}"></span>
                                     </div>
                                 </div>
                                 <div class="fancyContent">
@@ -99,9 +99,9 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                         </div>
                         <div id="addToBasketSize" class="addToBasketDetail">
                             <div class="fancySelection">
-                                <div class="fancyHeader"><span>Product Size</span>
+                                <div class="fancyHeader"><span th:text="#{basket.info.design.size.name}"></span>
                                     <div id="productSizeInfoIcon" class="addToBasketInfoIcon infoPopup">
-                                        <span class="infoPopupText">Wow, much text</span>
+                                        <span class="infoPopupText" th:text="#{basket.info.design.size}"></span>
                                     </div>
                                 </div>
                                 <div class="fancyContent">
@@ -112,7 +112,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                             </div>
                         </div>
                         <div id="addToBasketPrice" class="addToBasketDetail">
-                            <label for="priceInput" id="priceLabel">Price: </label>
+                            <label for="priceInput" id="priceLabel"><span th:text="#{basket.price}"></span> </label>
                             <input type="text" name="priceInput" id="priceInput" value="695kr" readonly>
                         </div>
                         <div id="addToBasketButtonContainer" class="addToBasketDetail">
@@ -181,9 +181,9 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                 <div id="familyTreeOptionsContainer">
                     <div class="fancySelection" id="bannerInput">
                         <div class="fancyHeader">
-                            <span>Banner Text</span>
+                            <span th:text="#{familyTree.info.banner.text.name}"></span>
                             <div id="bannerTextInfoIcon" class="addToBasketInfoIcon infoPopup">
-                                <span class="infoPopupText">Wow, much text</span>
+                                <span class="infoPopupText"th:text="#{familyTree.info.banner.text}"></span>
                             </div>
                         </div>
                         <div class="fancyContent">
@@ -196,7 +196,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                         <div class="fancyHeader">
                             <span>Banner Design</span>
                             <div id="bannerDesignInfoIcon" class="addToBasketInfoIcon infoPopup">
-                                <span class="infoPopupText">Wow, much text</span>
+                                <span class="infoPopupText" th:text="#{familyTree.info.banner.design}"></span>
                             </div>
                         </div>
                         <div class="fancyContent" id="bannerDesignInputContainer">
@@ -209,9 +209,9 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <div class="fancySelection" id="font">
                         <div class="fancyHeader">
-                            <span>Font Style</span>
+                            <span>Font</span>
                             <div id="fontStyleInfoIcon" class="addToBasketInfoIcon infoPopup">
-                                <span class="infoPopupText">Wow, much text</span>
+                                <span class="infoPopupText" th:text="#{familyTree.info.font.style}"></span>
                             </div>
                         </div>
                         <div class="fancyContent" id="fontStyleInputContainer">
@@ -225,9 +225,9 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <div class="fancySelection" id="boxSize">
                         <div class="fancyHeader">
-                            <span>Box Size</span>
+                            <span th:text="#{familyTree.info.box.size.name}"></span>
                             <div id="boxSizeInfoIcon" class="addToBasketInfoIcon infoPopup">
-                                <span class="infoPopupText">Wow, much text</span>
+                                <span class="infoPopupText" th:text="#{familyTree.info.box.size}"></span>
                             </div>
                         </div>
                         <div class="fancyContent" id="boxSizeInputContainer">
@@ -239,9 +239,9 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <div class="fancySelection" id="fontSize">
                         <div class="fancyHeader" style="margin-right: 1vh;">
-                            <span>Big Font Size</span>
+                            <span th:text="#{familyTree.info.big.font.name}"></span>
                             <div id="bigFontSizeInfoIcon" class="addToBasketInfoIcon infoPopup">
-                                <span class="infoPopupText">Wow, much text</span>
+                                <span class="infoPopupText" th:text="#{familyTree.info.big.font}"></span>
                             </div>
                         </div>
                         <div class="fancyContent" id="bigFontSizeInputContainer">
@@ -249,9 +249,17 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                         </div>
 
                     </div>
+                    <div class="loadSave">
+                        <button id="saveDesignButton" onclick="saveDesign()">
+                            <span th:text="#{familyTree.option.save}"></span>
+                        </button>
 
+                        <button id="loadDesignButton" onclick="">
+                            Load
+                        </button>
+                    </div>
                     <button id="addToBasket" class="largeButton" data-toggle="modal" data-target="#addToBasketModal" onclick="updatePrice()">
-                        Add To Basket
+                        <span th:text="#{familyTree.option.add}"></span>
                     </button>
 
                     <!-- AD SHARE FUNC LATER
