--- a/src/main/resources/templates/home/productExample.html
+++ b/src/main/resources/templates/home/productExample.html
@@ -23,39 +23,28 @@
             <div id="aboutUsContainer">
                 <div id="aboutUs">
                     <section id="generalInformation">
-                        <span class="title">Product</span><br>
-                        <img th:src="@{~/img/productPage/Artboard 3.png}" alt="Tree Design" class="">
-                        <p>
-                            Unique wood design. With several options of changing design, fonts and text, every product becomes
-                            unique and personal. In just a few minutes you can create your own family tree and get it laser-cut
-                            into a beautiful piece of oak wood.
-                        </p>
+                        <span class="title" th:text="#{home.intro.title}"></span><br>
+                        <img th:src="@{~/img/productPage/Artboard 3.png}" alt="Tree Design" class=""><br>
+                        <span th:text="#{home.intro.text}"></span><br>
                     </section>
                     <section id="development">
                         <img th:src="@{~/img/productPage/Artboard 4.png}" alt="Tree Design" class="image">
                         <div class="text">
-                            <span class="title">Sizes</span>
+                            <span class="title" th:text="#{home.size.title}"></span><br>
+                            <span th:text="#{home.size.text}"></span><br>
                             <p>
-                                After creating the design for your family tree, you are able to select the size you wish to
-                                purchase the tree in. We have a selection of sizes that include:<br>
-                                20 x 20 cm - 495kr<br>
-                                25 x 25 cm - 695kr<br>
-                                30 x 30 cm - 995kr<br>
-                                In case you wish to purchase a different size, you can always request it by sending us an email.
-                                We will respond as quickly as possible and give you the best price we can offer depending on
-                                your request.
+                                20 x 20 cm - 495 kr.<br>
+                                25 x 25 cm - 695 kr.<br>
+                                30 x 30 cm - 995 kr.<br>
                             </p>
+                            <span th:text="#{home.size.text.two}"></span>
                         </div>
                     </section>
 
                     <section id="familytrees">
                         <div class="text">
-                            <span class="title">Package</span>
-                            <p>
-                                When you purchase a tree desing you are automatically planting a tree through TeamTrees.org.
-                                The packaging is made with a zero procent waste agenda. 0% plastic and 100% reused FSC certified paper.
-                                You also receive a treecreate keychain as well as a wooden stand that matches your family tree.
-                            </p>
+                            <span class="title" th:text="#{home.package.title}"></span><br>
+                            <span th:text="#{home.package.text}"></span>
                         </div>
                         <img th:src="@{~/img/productPage/Artboard 1.png}" alt="Tree Design" class="image" style="margin:0!important">
                     </section>
@@ -63,16 +52,10 @@
                     <section id="goal">
                         <img th:src="@{~/img/productPage/Artboard 2.png}" alt="Tree Design" class="image" style="margin-top:4vh;">
                         <div class="text">
-                            <span class="title">Team</span>
-                            <p>
-                                Treecreate was started in September 2020 by a group of students from KEA: <br>
-                                <strong>Teodor Jonasson Founder/CEO<br> Jan Bogoryja-Zakrzewski CTO<br> Gustav Kelkjær CPO<br>
-                                    Cristian-Valentin Webdeveloper<br>Alex Maccagnan Webdeveloper<br></strong>
-                                Our goal is to create a sustainable company that produces specialized
-                                and unique wood design for every customer. We aim to have as little waste in production as
-                                possible and to rebuild the forest we donate a part of the money made from each purchase to
-                                plant a tree.
-                            </p>
+                            <span class="title" th:text="#{home.team.title}"></span><br>
+                            <span th:text="#{home.team.text}"></span><br>
+                            <strong><span th:text="#{home.team.text.members}"></span><br></strong>
+                            <span th:text="#{home.team.text.two}"></span>
                         </div>
                     </section>
 
